--- a/practicas freecodecamp/index.html
+++ b/practicas freecodecamp/index.html
@@ -37,11 +37,42 @@
             No dejes que alguien defina tus límites sólo por el lugar de donde
             vienes. Tu único límite es tu alma.
           </span>
-          <br />
+          <!-- <br /> -->
           <cite>- Chef Gusteau - Ratatouille</cite>
         </div>
       </div>
+      <div class="box-container">
+        <div class="sub-box">
+          <a href="#">
+            <div class="box-1 box">
+              <img src="pc.png" alt="laptop" />
+              <span>Certificación Diseño Web Responsivo Legado</span>
+            </div></a
+          >
+        </div>
+        <div class="sub-box">
+          <a href="#">
+            <div class="box-2 box">
+              <img src="js2.png" alt="JavaScript" />
+              <span
+                >Certificación Algoritmos de JavaScript y Estructura de
+                Datos</span
+              >
+            </div></a
+          >
+        </div>
+
+        <div class="sub-box">
+          <a href="#">
+            <div class="box-3 box">
+              <img src="react.png" alt="react" />
+              <span>Certificación Librerías de desarrollo de la interfaz</span>
+            </div></a
+          >
+        </div>
+      </div>
     </section>
+
     <footer></footer>
   </body>
 </html>
