tparte de cursos disponibles: terminada

--- a/practicas freecodecamp/index.html
+++ b/practicas freecodecamp/index.html
@@ -70,6 +70,31 @@
             </div></a
           >
         </div>
+
+        <div class="sub-box">
+          <a href="#">
+            <div class="box-4 box">
+              <img src="base.png" alt="react" />
+              <span>Certificación Desarrollo Back End y APIs</span>
+            </div></a
+          >
+        </div>
+        <div class="sub-box">
+          <a href="#">
+            <div class="box-5 box">
+              <img src="py.png" alt="react" />
+              <span>Certificación Cálculo Cientifico con Python</span>
+            </div></a
+          >
+        </div>
+        <div class="sub-box">
+          <a href="#">
+            <div class="box-6 box">
+              <img src="stats.png" alt="react" />
+              <span>Certificación Análisis de Datos con Python</span>
+            </div></a
+          >
+        </div>
       </div>
     </section>
 
